--- a/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
+++ b/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
@@ -1,7 +1,6 @@
 
 <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
   <div class="rounded-t mb-0 px-4 py-3 border-0">
-
     <div class="flex flex-wrap items-center">
       <div class="relative w-full px-4 max-w-full flex-grow flex-1">
         <!-- Button trigger modal -->
@@ -20,10 +19,10 @@
 
         </div><br><br>
         <!-- modal -->
-        <div class="modal fixed inset-0  flex" *ngIf="showModal">
-          <div class="flex items-center justify-center w-full">
+        <div class="modal fixed inset-0 flex" *ngIf="showModal">
+          <div class="flex items-center justify-center w-full h-full">
             <div class="modal-overlay absolute w-full h-full bg-gray-800 opacity-50"></div>
-            <div class="modal-container bg-white w-6/12 items-center mx-auto rounded shadow-lg z-50 overflow-y-auto">
+            <div class="modal-container bg-white w-6/12 mx-auto my-auto rounded shadow-lg z-50 overflow-y-auto max-h-full top-1/4 left-1/4">
               <!-- Add your modal content here -->
               <div  class=" modal-content py-4 text-left px-6">
                 <div class="flex justify-between items-center pb-3">
@@ -32,13 +31,12 @@
                   </div>
                   <div></div>
                   <div>
-                    <button (click)="ResetForm(); closeModal()" class="modal-close cursor-pointer z-50">
-                        <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                          <path
-                            d="M6.83 6l-5 5L2 10.83 6.83 6 2 1.17 3.17 0 8 4.83 12.83 0 14 1.17 9.17 6 14 10.83 12.83 12 8 7.17 3.17 12 2 10.83 6.83 6z"
-                          ></path>
-                        </svg>
-                      </button>
+                    <button (click)="closeModal()" style="background-color: white;" class="modal-close custom-button cursor-pointer z-50">
+                      <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                        <path d="M6.83 6l-5 5L2 10.83 6.83 6 2 1.17 3.17 0 8 4.83 12.83 0 14 1.17 9.17 6 14 10.83 12.83 12 8 7.17 3.17 12 2 10.83 6.83 6z"></path>
+                      </svg>
+                    </button>
+                    
                   </div>
                 </div>
                 <!-- fomulario -->
@@ -95,7 +93,7 @@
                                           ESTATUS*
                                         </label>
                                         <label class="relative inline-flex items-center cursor-pointer">
-                                          <input type="checkbox" value="" class="sr-only peer" formControlName="Estatus" [required]="true">
+                                          <input [(ngModel)]="toggleValue" type="checkbox" value="true" class="sr-only peer" formControlName="Estatus" required>
                                           <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-500"></div>
                                           <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"></span>
                                         </label>
@@ -115,11 +113,11 @@
                           <br>      
                           TODOS LOS CAMPOS MARCADOS CON * SON REQUERIDOS
                           <div class="flex justify-end">
-                            <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" >
-                              {{ isUpdating ? " AGREGAR" : "ACTUALIZAR" }}
-                            </button>
+                            <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950 custom-button"
+                            >
+                            {{ isUpdating ? " ACTUALIZAR" : "AGREGAR" }}
+                          </button>
                           </div>
-                          
                     </form>
                   </div>
                   
