--- a/src/app/pages/panel/Beneficiario/beneficiario.component.css
+++ b/src/app/pages/panel/Beneficiario/beneficiario.component.css
@@ -11,7 +11,7 @@
     color: #4a5568; /* Color de texto gris */
     font-size: 0.875rem; /* Tamaño de fuente */
     font-weight: bold;
-    margin-bottom: 0.5rem; /* Espacio inferior */
+    margin-bottom: 0.5rem; 
 }
 
 .label1{ 
