--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.html
@@ -14,7 +14,7 @@
   <div>
   </div>
   <div>
-    <button title="Descargar base de datos de usuarios" class="mr-5">
+    <button title="Descargar base de datos de usuarios" class="mr-5" (click)="exportToExcel()">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-download" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
         <path d="M19 18a3.5 3.5 0 0 0 0 -7h-1a5 4.5 0 0 0 -11 -2a4.6 4.4 0 0 0 -2.1 8.4" />
@@ -22,6 +22,7 @@
         <path d="M9 19l3 3l3 -3" />
       </svg>
     </button>
+    
     <input
       class="border border-gray-300 rounded-md focus:outline-none focus:border-blue-500"
       type="text"
