--- a/src/shared/components/cards/card-areas/card-areas.component.html
+++ b/src/shared/components/cards/card-areas/card-areas.component.html
@@ -22,10 +22,12 @@
           </button>
           <div class="ms-auto text-muted">
             <div class="input-icon">
-                <input [(ngModel)]="filtro"  #busquedaInput type="text" class="form-control form-control-rounded" placeholder="Buscar" />
+              <form action="">
+                <input type="text" class="form-control form-control-rounded" placeholder="Buscar" />
                 <span class="input-icon-addon">
                   <i class="ti ti-search"></i>
                 </span>
+              </form>
             </div>
           </div>
                   </div>
