--- a/src/shared/components/card-bar-evidencia/card-bar-evidencia.component.css
+++ b/src/shared/components/card-bar-evidencia/card-bar-evidencia.component.css
@@ -3,7 +3,11 @@ body {
     color: #1a202c;
     font-family: 'sans-serif';
   }
-  
+  .modal-container {
+    margin-top: 5%; 
+    border-bottom-width: 50px;
+    padding-bottom: 10px;
+  }
   .container {
     margin-left: auto;
     margin-right: auto;
