--- a/src/shared/components/cards/card-social-traffic/card-social-traffic.component.css
+++ b/src/shared/components/cards/card-social-traffic/card-social-traffic.component.css
@@ -116,8 +116,11 @@ body {
     height: 32px;
 }
 
-
-/* Table Cells */
+.modal-container {
+    margin-top: 5%;
+    border-bottom-width: 50px;
+    padding-bottom: 10px;
+}
 
 .table-cell {
     padding: 0.75rem;
