--- a/src/app/pages/panel/nube-palabras/nube-palabras.component.html
+++ b/src/app/pages/panel/nube-palabras/nube-palabras.component.html
@@ -1,5 +1,10 @@
-<div class="flex justify-center items-center">
-  <div class="flex space-x-4">
-    <app-card-stats></app-card-stats>
+
+<div class="flex flex-wrap">
+  <div class="w-full px-4">
+    <div class="flex">
+      <script src="https://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
+      <div id="container"></div>
+    </div>
   </div>
 </div>
