--- a/src/shared/components/cards/card-stats/card-stats.component.html
+++ b/src/shared/components/cards/card-stats/card-stats.component.html
@@ -1,28 +1,10 @@
-<div
-  class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-100 border-0"
->
-  <div class="rounded-t bg-white mb-0 px-6 py-6">
-    <div class="text-center flex justify-between">
-      <h6 class="text-blueGray-700 text-xl font-bold">Nube de palabras</h6>
 
+<div class="flex flex-wrap">
+  <div class="w-full px-4">
+    <div class="flex">
+      <script src="https://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
+      <div id="container"></div>
     </div>
-  </div>
-  <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
-    <form>
-
-
-      <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
-
-      </h6>
-      <div class="flex flex-wrap">
-        <div class="w-full lg:w-12/12 px-4">
-          <div class="relative w-full mb-3">
-            <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/wordcloud.js"></script>
-<div id="container"></div>
-          </div>
-        </div>
-      </div>
-    </form>
   </div>
 </div>
