--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.css
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.css
@@ -130,3 +130,10 @@ body {
 .custom-table-row:hover {
   background-color: #ddd1dd; /* Cambia el color a tu preferencia */
 }
+.error-message {
+  color: #e53e3e;
+  font-size: 0.875rem;
+}
+
+
+
