--- a/src/shared/components/cards/card-areas/card-areas.component.css
+++ b/src/shared/components/cards/card-areas/card-areas.component.css
@@ -148,3 +148,7 @@ body {
     background-color: #ddd1dd;
     /* Cambia el color a tu preferencia */
 }
+.error-message {
+    color: #e53e3e;
+    font-size: 0.875rem;
+}
