--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -60,25 +60,25 @@
                 </li>
 
                 <li class="items-center">
-                    <a [routerLink]="['dashboard']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminDashboard="routerLinkActive" [ngClass]="
-              adminDashboard.isActive
+                    <a [routerLink]="['dashboard']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #tablero="routerLinkActive" [ngClass]="
+              tablero.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-tv mr-2 text-sm" [ngClass]="
-                adminDashboard.isActive ? 'opacity-75' : 'text-blueGray-300'
+                tablero.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Tablero
                     </a>
                 </li>
 
                 <li class="items-center">
-                    <a [routerLink]="['usuarios']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminSettings="routerLinkActive" [ngClass]="
-              adminSettings.isActive
+                    <a [routerLink]="['usuarios']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #usuarios="routerLinkActive" [ngClass]="
+              usuarios.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-tools mr-2 text-sm" [ngClass]="
-                adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
+                usuarios.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Usuarios
                     </a>
                 </li>
@@ -109,57 +109,57 @@
                 </li>
 
                 <li class="items-center">
-                    <a [routerLink]="['beneficiario']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminMaps="routerLinkActive" [ngClass]="
-              adminMaps.isActive
+                    <a [routerLink]="['beneficiario']" class="text-xs uppercase py-3 font-bold block" routerLinkActive  #beneficiario="routerLinkActive" [ngClass]="
+              beneficiario.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-map-marked mr-2 text-sm" [ngClass]="
-                adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
+                beneficiario.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Beneficiario
                     </a>
                 </li>
                 <li class="items-center">
-                    <a [routerLink]="['programasocial']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminMaps="routerLinkActive" [ngClass]="
-              adminMaps.isActive
+                    <a [routerLink]="['programasocial']" class="text-xs uppercase py-3 font-bold block" routerLinkActive  #programas="routerLinkActive" [ngClass]="
+              programas.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-map-marked mr-2 text-sm" [ngClass]="
-                adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
+                programas.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Programas Sociales
                     </a>
                 </li>
                 <li class="items-center">
-                    <a [routerLink]="['mapa-programas-sociales']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminMaps="routerLinkActive" [ngClass]="
-              adminMaps.isActive
+                    <a [routerLink]="['mapa-programas-sociales']" class="text-xs uppercase py-3 font-bold block" routerLinkActive  #mapsocial="routerLinkActive" [ngClass]="
+              mapsocial.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-map-marked mr-2 text-sm" [ngClass]="
-                adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
+                mapsocial.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Mapa Programas Sociales
                     </a>
                 </li>
                 <li class="items-center">
-                    <a [routerLink]="['evidencias']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminMaps="routerLinkActive" [ngClass]="
-              adminMaps.isActive
+                    <a [routerLink]="['evidencias']" class="text-xs uppercase py-3 font-bold block" routerLinkActive  #evidencias="routerLinkActive" [ngClass]="
+              evidencias.isActive
                 ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             ">
                         <i class="fas fa-map-marked mr-2 text-sm" [ngClass]="
-                adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
+                evidencias.isActive ? 'opacity-75' : 'text-blueGray-300'
               "></i> Evidencias
                     </a>
                 </li>
                 <li class="items-center">
-                  <a [routerLink]="['nube-palabras']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #adminMaps="routerLinkActive" [ngClass]="
-            adminMaps.isActive
+                  <a [routerLink]="['nube-palabras']" class="text-xs uppercase py-3 font-bold block" routerLinkActive #palabras="routerLinkActive" [ngClass]="
+            palabras.isActive
               ? 'text-purple-900 hover:text-purple-900'
               : 'text-blueGray-700 hover:text-blueGray-500'
           ">
                       <i class="fas fa-map-marked mr-2 text-sm" [ngClass]="
-              adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
+              palabras.isActive ? 'opacity-75' : 'text-blueGray-300'
             "></i> Nube de palabras
                   </a>
               </li>
